--- a/.eslintrc
+++ b/.eslintrc
@@ -7,5 +7,11 @@
   ],
   "env": {
     "browser": true
+  },
+  "rules": {
+    "indent": 2,
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "no-console": "off",
+    "function-paren-newline": "off"
   }
 }
