--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "indent": 2,
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "no-console": "warn",
+    "no-undef": "warn",
     "function-paren-newline": "warn",
     "import/prefer-default-export": "warn"
   }
