--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^23.5.0",
     "jest-styled-components": "^6.0.1",
     "sass-loader": "^7.0.3",
+    "sinon": "^6.1.5",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
