--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --hot",
-    "test": ""
+    "test": "jest"
   },
   "keywords": [
     "react",
@@ -19,31 +19,21 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
+    "enzyme": "^3.4.3",
+    "enzyme-adapter-react-16": "^1.2.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
     "html-webpack-plugin": "^3.2.0",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
+    "jest": "^23.5.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "connected-react-router": "^4.3.0",
-    "history": "^4.7.2",
-    "prop-types": "^15.6.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-actions": "^2.4.0",
-    "redux-logger": "^3.0.6",
-    "redux-saga": "^0.16.0"
+    "react-dom": "^16.4.1"
   }
 }
